--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@thirdweb-dev/react": "^2.4.2",
+    "@thirdweb-dev/sdk": "^2.3.15-1",
+    "cookie": "^0.5.0",
+    "ethers": "^5.6.8",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "node": "^17.0.35",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6"
   }
