--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "ethers": "^5.6.8",
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-spinners": "^0.12.0"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
