--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "axios": "^0.27.2",
     "cookie": "^0.5.0",
     "ethers": "^5.6.8",
-    "next": "12.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^12.1.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-spinners": "^0.12.0"
   },
   "devDependencies": {
